# dice-roller

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/dice_roller/: logic.py  main.py
tests/: test_main.py  test_server.py
